# sync-any-config

./: .env.example  .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  useConfigSyncApp.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_env.rs  atomic_file.rs  file_watcher.rs  lib.rs  main.rs  secure_storage.rs
src/auth/: oauth-service.ts  secure-auth-storage.ts  supabase-client.ts
src/components/: PlaintextWarning.tsx
src/components/app/: AppContent.tsx  AppHeader.tsx  AppMessages.tsx  AppSidebar.tsx  AppView.test.tsx  AppView.tsx  CloudManagementSection.tsx  ConflictPanel.tsx  FileStatusCards.tsx  RevisionSection.tsx  StatusBadge.tsx  presentation.ts  view-styles.ts  view-types.ts
src/components/ui/: alert.tsx  badge.tsx  button.tsx  input.tsx  separator.tsx  textarea.tsx
src/lib/: utils.ts
src/lib/sync-adapters/: device-store.ts  local-file-store.ts  supabase-sync-store.ts
src/lib/sync-adapters/__tests__/: device-store.test.ts  local-file-store.test.ts
src/lib/sync-core/: decisions.ts  file-metadata.ts  hashes.ts  presets.ts  status.ts  types.ts
src/lib/sync-core/__tests__/: decisions.test.ts  file-metadata.test.ts  hashes.test.ts  presets.test.ts  status.test.ts
src/test/: setup.ts
supabase/: config.toml
supabase/migrations/: 202605280001_init_sync_schema.sql  202605280002_add_auto_upload_flag.sql
supabase/tests/: sync_schema_test.sql
