[package]
name = "sync-any-config"
version = "0.1.0"
description = "Sync arbitrary config files across devices"
authors = ["sunven"]
edition = "2021"

[lib]
name = "sync_any_config_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-opener = "2"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
log = "0.4"
notify = "8.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.14"
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3.14"
